--- a/Team Utkarsh/gallery.html
+++ b/Team Utkarsh/gallery.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="favicon (1).ico">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/bootstrap-icons.css" rel="stylesheet">
-    <link href="css/templatemo-tiya-golf-club.css" rel="stylesheet">
+    <link href="css/teamutkarsh.css" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar back1 navbar-expand-lg">                
